crates/flir-cli/tests/integration/snapshots/integration__toml__malformed_toml_syntax.snap
---
source: crates/flir-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
flir failed
  Cause: Failed to parse [TEMP_DIR]/flir.toml:
TOML parse error at line 2, column 8
  |
2 | [linter
  |        ^
unclosed table, expected `]`


----- args -----
check .
